--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-metismenu-router-link",
   "version": "0.1.0",
-  "description": "Router link extension for `react-metismenu` menu component",
+  "description": "Router link extension for `react-metismenu` menu component.",
   "main": "dist/react-metismenu-router-link.min.js",
   "keywords": [
     "react",
