Added demo page builder scripts

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build-dist-js-min": "webpack --config webpack/dist-min.conf.js --progress --colors",
     "build-dist-js": "webpack --config webpack/dist.conf.js --progress --colors",
     "build-dist": "rm -rf dist && npm run build-dist-js && npm run build-dist-js-min",
+    "build-demo": "webpack --config webpack/demo.conf.js --progress --colors",
     "lint-confs": "eslint webpack __tests__ --ext=jsx --ext=js",
     "lint-src": "eslint src --ext=jsx --ext=js",
     "lint-dev": "eslint dev --ext=jsx --ext=js",
