--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-metismenu-router-link",
   "version": "0.1.0",
   "description": "Router link extension for `react-metismenu` menu component",
-  "main": "dist/react-metismenu-router-link.min.js",
+  "main": "lib/RouterLink.js",
   "keywords": [
     "react",
     "metismenu",
@@ -20,6 +20,8 @@
     "build-dist-js-min": "webpack --config webpack/dist-min.conf.js --progress --colors",
     "build-dist-js": "webpack --config webpack/dist.conf.js --progress --colors",
     "build-dist": "rm -rf dist && npm run build-dist-js && npm run build-dist-js-min",
+    "build-lib": "rm -rf lib && babel src -d lib",
+    "build": "npm run build-lib && npm run build-dist",
     "lint-confs": "eslint webpack __tests__ --ext=jsx --ext=js",
     "lint-src": "eslint src --ext=jsx --ext=js",
     "lint-dev": "eslint dev --ext=jsx --ext=js",
@@ -34,6 +36,7 @@
   },
   "homepage": "https://github.com/alpertuna/react-metismenu#readme",
   "devDependencies": {
+    "babel-cli": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
