--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "scripts": {
     "dev-server": "webpack-dev-server --config webpack/dev.conf.js --progress --colors --hot --inline",
     "start": "npm run dev-server",
-    "build-demo": "webpack --config webpack/demo.conf.js --progress --colors",
+    "build-demo": "rm -rf demo && mkdir demo && cp dev/react-metismenu-standart.min.css dev/index.html demo && webpack --config webpack/demo.conf.js --progress --colors",
     "build-dist-js-min": "webpack --config webpack/dist-min.conf.js --progress --colors",
     "build-dist-js": "webpack --config webpack/dist.conf.js --progress --colors",
     "build-dist": "rm -rf dist && npm run build-dist-js && npm run build-dist-js-min",
     "build-lib": "rm -rf lib && babel src -d lib",
     "build": "npm run build-lib && npm run build-dist",
-    "lint-confs": "eslint webpack __tests__ --ext=jsx --ext=js",
+    "lint-confs": "eslint webpack --ext=jsx --ext=js",
     "lint-src": "eslint src --ext=jsx --ext=js",
     "lint-dev": "eslint dev --ext=jsx --ext=js",
     "test": "npm run lint-confs && npm run lint-src"
@@ -41,21 +41,24 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^11.0.0",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.1",
-    "eslint-plugin-react": "^6.2.0",
+    "eslint": "^3.6.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-metismenu": "^0.6.0",
+    "react-metismenu": "^1.1.1",
     "react-router": "^2.7.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   },
   "peerDependencies": {
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
-    "react-metismenu": "^0.6.0",
+    "react-metismenu": "~1.1",
     "react-router": "^2.7.0"
+  },
+  "dependencies": {
+    "classnames": "^2.2.5"
   }
 }
