--- a/package.json
+++ b/package.json
@@ -46,17 +46,17 @@
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-metismenu": "^1.1.1",
-    "react-router": "^2.7.0",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-metismenu": "^1.1.3",
+    "react-router": "^3.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   },
   "peerDependencies": {
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-metismenu": "~1.1",
-    "react-router": "^2.7.0"
+    "react-router": "^2.7.0 || ^3.0.0"
   },
   "dependencies": {
     "classnames": "^2.2.5"
