--- a/package.json
+++ b/package.json
@@ -49,14 +49,16 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-metismenu": "^1.2.2",
-    "react-router": "^3.0.0",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   },
   "peerDependencies": {
     "react": "^15.0",
     "react-metismenu": "^1.2.2",
-    "react-router": "^3.0.0"
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1"
   },
   "dependencies": {
     "classnames": "^2.2.5"
