--- a/package.json
+++ b/package.json
@@ -46,19 +46,20 @@
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-metismenu": "^1.2.2",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-metismenu": "^1.4.0-alpha.2",
+    "react-router-dom": "^4.2.2",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   },
   "peerDependencies": {
-    "react": "^15.0",
-    "react-metismenu": "^1.2.2",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-metismenu": "^1.4.0-alpha.2",
+    "react-router-dom": "^4.2.2"
   },
   "dependencies": {
     "classnames": "^2.2.5"
